mail/network-policy-dovecot-allow-egress-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dovecot-allow-egress-dns
  namespace: mail
spec:
  podSelector:
    matchLabels:
      app: dovecot
      tier: mail
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
